[package]
name = "aum-api"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
description = "API library for AUM"

[dependencies]
aum-core = "0.1.0"
futures-util = "0.3.31"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
