[package]
name = "aum-core"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description = "Core library for AUM"

[dependencies]
async-trait = "0.1.88"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
