[package]
name = "aum-engine"
version.workspace = true
edition.workspace = true
readme.workspace = true
description = "Engine library for AUM"
license.workspace = true
repository.workspace = true

[dependencies]
aum-core = "0.1.0"
futures-util = "0.3.31"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
